--- a/sq.css
+++ b/sq.css
@@ -3,12 +3,14 @@
 	border: 3px solid black;
 	color: white;
 	padding:5px;
-	height: 220px;
+	height: 150px;
 	width: 400px;
 	border-radius: 10px;
 	text-align: center;
 	margin:auto;
 	font-size: 20px;
+	float: left;
+	position: relative;
 }
 
 .button {
@@ -23,19 +25,7 @@
 	font-size: 17px;
 	margin: 10px;
 	float:left;
-
-}
-#addButton {
-	height: 35px;
-	width: 120px;
-	border: 3px solid black;
-	border-radius: 10px;
-	background-color: white;
-	color:#0B614B;
-	text-align: center;
-	padding: 10px;
-	font-size: 17px;
-	margin: 10px auto;
+	position:relative;
 }
 
 body {
@@ -52,10 +42,17 @@ body {
 #dataStructure {
 	height: 200px;
 	width: 800px;
+	float:left;
 }
 
 #dataValue {
-	height: 30px;
-	width: 30px;
+	height: 20px;
+	width: 50px;
+	float: left;
+	background-color: green;
+	border: 2px solid black;
+	margin: 3px;
+	text-align: center;
+	list-style-type: none;
 }
 
