--- a/sq.css
+++ b/sq.css
@@ -9,8 +9,6 @@
 	text-align: center;
 	margin:auto;
 	font-size: 20px;
-	float: left;
-	position: relative;
 }
 
 .button {
@@ -18,10 +16,10 @@
 	width: 90px;
 	border: 3px solid black;
 	border-radius: 10px;
-	background-color: white;
-	color:#0B614B;
+	background-color: #8A0829;
 	text-align: center;
 	padding: 10px;
+	color:white;
 	font-size: 17px;
 	margin: 10px;
 	float:left;
@@ -42,16 +40,17 @@ body {
 #dataStructure {
 	height: 200px;
 	width: 800px;
-	float:left;
+
 }
 
 #dataValue {
-	height: 20px;
-	width: 50px;
+	height: 25px;
+	width: 55px;
 	float: left;
-	background-color: green;
+	background-color: #8A0829;
 	border: 2px solid black;
 	margin: 3px;
+	color:white;
 	text-align: center;
 	list-style-type: none;
 }
